[package]
name = "tskibd-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
csv = "1.2.2"
itertools = "0.11.0"
serde = { version = "1.0.186", features = ["derive"] }
slice-group-by = "0.3.1"
smallvec = "1.11.0"
